actions ansible  commit

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -3,47 +3,40 @@ name: Deploy Next.js with Ansible
 on:
   push:
     branches:
-      - master
-  workflow_dispatch:
+      - master       # adapte si ta branche s'appelle autrement
+  workflow_dispatch: # permet de déclencher manuellement
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     env:
-      EC2_HOST: ${{ secrets.EC2_HOST }}
+      EC2_HOST: ${{ secrets.EC2_HOST }} # ou mets directement ton IP si tu préfères
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'npm'
-
-      - name: Install dependencies (CI)
-        run: |
-          npm ci
-      - name: Build Next.js (CI)
-        run: |
-          npm run build
-
       - name: Set up SSH key
         run: |
           mkdir -p ~/.ssh
-          printf '%s\n' "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/aws-dev-key.pem
-          sed -i 's/\r$//' ~/.ssh/aws-dev-key.pem
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/aws-dev-key.pem
           chmod 600 ~/.ssh/aws-dev-key.pem
 
-          # Known hosts
-          ssh-keyscan -H "${{ secrets.EC2_HOST }}" >> ~/.ssh/known_hosts
+          # Known hosts (évite le prompt interactif)
+          if [ -n "${EC2_HOST}" ]; then
+            ssh-keyscan -H "${EC2_HOST}" >> ~/.ssh/known_hosts
+          else
+            # fallback: essaie de lire l'IP depuis l'inventaire ou laisse ssh gérer
+            echo "EC2_HOST non défini, ssh-keyscan ignoré."
+          fi
 
       - name: Install Ansible and dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y ansible python3-pip rsync
+
+          # Collections nécessaires
           ansible-galaxy collection install community.general ansible.posix
 
       - name: Run Ansible playbook (deploy Next.js)
@@ -51,4 +44,4 @@ jobs:
         env:
           ANSIBLE_ROLES_PATH: ${{ github.workspace }}/infra/ansible/roles
         run: |
-          ansible-playbook -i inventory/hosts.ini playbooks/deploy-next.yml
+          ansible-playbook -i inventory/hosts.ini playbooks/deploy.yml
